# cloudmesh-ai-llm

./: .aider.chat.history.md  .aider.input.history  .gitignore  CHANGELOG.md  IMPACCT.md  LICENSE  Makefile  NEWS.md  README.md  VERSION  mkdocs.yml  pyproject.toml  requirements.txt  start_uva.sh  test_config.py  test_server.py  testx.sh  uva.md
config/: llm copy.yaml  llm.yaml  vllm_servers.yaml  vllm_servers_example.yaml
docs/: api.md  uva.md
hand/: README.md  start_uva.sh
src/cloudmesh/ai/command/: aider_launcher.py  claude_launcher.py  docker_manager.py  launch.py  orchestrator.py  vllm.py  webui_launcher.py
src/cloudmesh/ai/command/templates/: start_uva.sh
src/cloudmesh/ai/vllm/: aider_launcher.py  batch_job.py  claude_launcher.py  client.py  config.py  exceptions.py  ijob.py  launchers.py  orchestrator.py  script.py  server.py  server_dgx.py  server_uva.py  squeue.py  start_script.py  tunnel.py  webui_launcher.py
src/cloudmesh/ai/vllm/configuration/: llm.yaml
src/cloudmesh/ai/vllm/configuration/templates/: DO-NOT-USE-start_uva.sh  aider.yaml  start_dgx.sh
src/cloudmesh/command/: gemma.py
src/cloudmesh/command/template/: aider.yaml
src/cloudmesh/command/template/dgx/: start.sh
src/cloudmesh/command/template/mac/: clean.sh  gui.sh  test.sh
tests/: test_client.py  test_orchestrator.py  test_refactor.py  test_vllm.py  test_vllm_examples.py  test_vllm_improvements.py
