[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudmesh-ai-llm"

dynamic = ["version"]
description = "Extension vllm created by CME"
license = {text = "Apache-2.0"}
urls = { "Homepage" = "https://github.com/cloudmesh-ai/cloudmesh-ai-llm" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click",
    "rich",
    "cloudmesh-ai-common",
    "cloudmesh-ai-cmc",
]
[tool.setuptools.dynamic]
version = {file = "VERSION"}

[project.entry-points."cloudmesh.ai.command"]
vllm = "cloudmesh.ai.command.vllm:vllm_group"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cloudmesh*"]